Bug fix - browse solutions menu icon alignment fix

--- a/themes/gv_sky/css/sass/_parts/header.sass
+++ b/themes/gv_sky/css/sass/_parts/header.sass
@@ -151,7 +151,7 @@
 	top: -4px
 //Browse icon fix for webkit
 .mobile .main-menu-item.first:before
-	top: -6px
+	top: -4px
 
 
 
